fixed a little misalignment in page browser

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ border-radius: 0 4px 4px 0 !important;
 }
 
 .result-count {
-  padding: 6px;
+  padding: 4px;
   float:right;
 }
 
